Fixed separate boxes
They now overlap over each other
when submit is clicked, the first disappears

--- a/style.css
+++ b/style.css
@@ -1,57 +1,29 @@
-/*
-# Front-end Style Guide
-
-## Layout
-
-The designs were created to the following widths:
-
-- Mobile: 375px
-- Desktop: 1440px
-
-## Colors
-
-### Primary
-
-- Orange: hsl(25, 97%, 53%)
-
-### Neutral
-
-- White: hsl(0, 0%, 100%)
-- Light Grey: hsl(217, 12%, 63%)
-- Medium Grey: hsl(216, 12%, 54%)
-- Dark Blue: hsl(213, 19%, 18%)
-- Very Dark Blue: hsl(216, 12%, 8%)
-
-## Typography
-
-### Body Copy
-
-- Font size (paragraph): 15px
-
-### Font
-
-- Family: [Overpass](https://fonts.google.com/specimen/Overpass)
-- Weights: 400, 700
-*/
-
 @import url('https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap');
 
 body {
     background-color: hsl(216, 12%, 8%);
 }
-
-.box {
+.container {
     height: 45vh;
     width: 42vh;
+    position: relative;
+    margin: 20vh auto;
+}
+.box {
+    height: 100%;
+    width: 100%;
     background-color: hsl(213, 19%, 15%);
     border-style: solid;
     border-width: 1px;
     border-radius: 2rem;
-    margin: 20vh auto;
     padding: 1.5rem 2rem;
+    position: absolute;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+}
+.stack-top {
+    z-index: 9;
 }
 
 /* Star */
@@ -157,11 +129,18 @@ button:hover {
     font-family: 'Overpass', sans-serif;
     font-weight: 400;
 }
+#box {
+    display: none;
+}
 
 footer {
     background-color: hsl(213, 19%, 18%);
     color: hsl(217, 12%, 63%);
     padding: 1rem;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    position: fixed;
     margin: 0;
     display: flex;
     justify-content: center;
